Intestazione completata - Inizio Corpo pagina

--- a/index.html
+++ b/index.html
@@ -11,16 +11,41 @@
 
     <!-- Intestazione pagina-->
     <header>
-        
+
+        <!-- Logo e titolo -->
+        <section>
+            <div class="contenitore-titolo">
+                <img id="logo" src="img/Logo.png" alt="">
+                <span id="logotext"> Toboolist</span>
+            </div>
+        </section>
+        <!-- /logo e titolo -->
     </header>
-    <!-- Fine intestazione pagina-->
+    <!-- Fine intestazione pagina -->
 
+    <div class="contenitore">
 
-    <!-- Corpo pagina -->
-    <main>
+        <!-- Corpo pagina -->
+        <main>
 
-    </main>
-    <!-- Fine corpo pagina -->
+            <!-- Menù -->
+            <section>
+                <div>
+                    <input type="button" value="Add task">
+                    <input type="button" value="Add selection">
+                </div>
+            </section>
+            <!-- /Menù -->
+
+            <!-- Elenco compiti -->
+            <section>
+
+            </section>
+            <!-- /Elenco compiti -->
+
+        </main>
+        <!-- Fine corpo pagina  -->
+    </div>
 
 </body>
 </html>
