--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
             <!-- Menù -->
             <section>
-                <div>
-                    <input type="button" value="Add task">
-                    <input type="button" value="Add selection">
+                <div class="contenitore-menù">
+                    <input id="add-task" type="button" value="Add Task">
+                    <input id="add-section" type="button" value="Add Section">
                 </div>
             </section>
             <!-- /Menù -->
