Alcune modifiche + inizio Elenco compiti

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Logo e titolo -->
         <section>
             <div class="contenitore-titolo">
-                <img id="logo" src="img/Logo.png" alt="">
+                <img id="logo" src="img/Logo.png" alt="Logo">
                 <span id="logotext"> Toboolist</span>
             </div>
         </section>
@@ -23,7 +23,7 @@
     </header>
     <!-- Fine intestazione pagina -->
 
-    <div class="contenitore">
+    
 
         <!-- Corpo pagina -->
         <main>
@@ -37,15 +37,17 @@
             </section>
             <!-- /Menù -->
 
+            <div class="contenitore">
+
             <!-- Elenco compiti -->
             <section>
-
+                <h2>New Task</h2>
             </section>
             <!-- /Elenco compiti -->
 
         </main>
         <!-- Fine corpo pagina  -->
-    </div>
+            </div>
 
 </body>
 </html>
