Esercizio Toboolist completato

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
     
 
-        <!-- Corpo pagina -->
-        <main>
+    <!-- Corpo pagina -->
+    <main>
+        <div class="contenitore"> 
 
             <!-- Menù -->
             <section>
@@ -37,17 +38,38 @@
             </section>
             <!-- /Menù -->
 
-            <div class="contenitore">
-
             <!-- Elenco compiti -->
-            <section>
-                <h2>New Task</h2>
-            </section>
+                <div class="tasks">                   
+                    <ul>
+                        <li>
+                            <h3>&#x25BE;New Tasks</h3>
+                            <ul>
+                                <li><span class="check-mark">&#x2714;</span>Quarterly Newsletter<span class="label editorial">Editorial</span></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>&#x25BE;Today</h3>
+                            <ul>
+                                <li><span class="check-mark">&#x2714;</span>Recruiting blog post<span class="label editorial">Editorial</span></li>
+                                <li><span class="check-mark">&#x2714;</span>Mobile app launch<span class="label q1-goals">Q1 Goals</span></li>
+                                <li><span class="cross-mark">&#x2714;</span>Interview Jhon H.<span class="label recruiting">Recruiting</span></li>
+                                <li><span class="check-mark">&#x2714;</span>Summit update to mobile storefronts<span class="label mobile">Mobile</span></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>&#x25BE;Upcomming</h3>
+                            <ul>
+                                <li><span class="cross-mark">&#x2714;</span>Schedule meeting with Alex</li>
+                                <li><span class="check-mark">&#x2714;</span>Homepage refresh<span class="label website">Website</span></li>
+                                <li><span class="check-mark">&#x2714;</span>Onboard new Sales team members<span class="label sales">Sales</span></li>
+                                <li><span class="check-mark">&#x2714;</span>Review editorial calender<span class="label editorial">Editorial</span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             <!-- /Elenco compiti -->
-
-        </main>
-        <!-- Fine corpo pagina  -->
-            </div>
-
+        </div>
+    </main>
+    <!-- Fine corpo pagina  -->
 </body>
 </html>
